docs(readme): update readme
Added README.md document with project information.

--- a/index.html
+++ b/index.html
@@ -16,34 +16,28 @@
 </head>
 
 <body class="bg-fb-bg flex items-center justify-center h-screen content-between">
-
     <main class="max-w-5xl">
         <div class="block md:flex content-center items-center">
             <div class="mr-10 text-center md:text-left m-10">
-                <h1 class="text-fb-blue font-bold text-6xl">facebook</h1>
-                <h2 class="text-fb-black text-2xl w-full mt-5 ">O Facebook ajuda você a se conectar e compartilhar com as
-                    pessoas que fazem parte da sua vida.</h2>
+                <h1 class="text-fb-blue font-bold text-6xl">Facebook</h1>
+                <h2 class="text-fb-black text-2xl w-full mt-5">O Facebook ajuda você a se conectar e compartilhar com as pessoas que fazem parte da sua vida.</h2>
             </div>
-
             <div class="">
                 <div class="bg-white rounded-lg shadow-lg flex items-center content-center flex-col p-5 gap-4 md:min-w-[400px] m-16 md:m-0 md:mr-5">
-                    <input class="input-home " type="email" placeholder="Email ou telefone">
-                    <input class="input-home " type="password" placeholder="Senha">
-                    <button
-                        class=" bg-fb-blue p-3 text-white rounded-lg text-lg font-bold hover:bg-blue-500 duration-150 w-full">Entrar</button>
-                    <a class="text-sm text-fb-blue text-center " href="#">Esqueceu a senha?</a>
+                    <input class="input-home" type="email" placeholder="Email ou telefone">
+                    <input class="input-home" type="password" placeholder="Senha">
+                    <button class="bg-fb-blue p-3 text-white rounded-lg text-lg font-bold hover:bg-blue-500 duration-150 w-full">Entrar</button>
+                    <a class="text-sm text-fb-blue text-center" href="#">Esqueceu a senha?</a>
                     <hr>
-                    <button
-                        class="bg-fb-green hover:bg-green-700 duration-150 text-white p-3 font-bold rounded-lg">Criar
-                        nova conta</button>
+                    <button class="bg-fb-green hover:bg-green-700 duration-150 text-white p-3 font-bold rounded-lg">Criar nova conta</button>
                 </div>
                 <aside class="mt-5 md:mr-5">
-                    <p class="text-center"><a class="font-bold hover:underline" href="#">Crie uma conta</a> para uma celebridade, uma marca
-                        ou uma empresa.</p>
+                    <p class="text-center"><a class="font-bold hover:underline" href="#">Crie uma conta</a> para uma celebridade, uma marca ou uma empresa.</p>
                 </aside>
             </div>
         </div>
     </main>
 </body>
+
 
 </html>
